alignment issue fix

--- a/src/NewExpense/NewExpense.css
+++ b/src/NewExpense/NewExpense.css
@@ -1,21 +1,23 @@
-.new-expense{
-    background-color: #a892a8;
-    padding: 1rem;
-    margin: 2rem auto;
-    width: 50rem;
-    max-width: 95%;
-    border-radius: 12px;
-    text-align: center;
-    box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+.new-expense {
+  background-color: #a892a8;
+  padding: 1rem;
+  margin: 2rem auto;
+  width: 51rem;
+  max-width: 95%;
+  border-radius: 12px;
+  text-align: center;
+  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  position: relative;
+  left: 10px;
 }
 
-.new-expense button{
-    font: inherit;
-    cursor: pointer;
-    padding: 1rem 2rem;
-    border: 1px solid #40005d;
-    border-radius: 12px;
-    background-color: #674c74;
-    font-size: 1.3rem;
-    margin: 0 0.25rem;
+.new-expense button {
+  font: inherit;
+  cursor: pointer;
+  padding: 1rem 2rem;
+  border: 1px solid #40005d;
+  border-radius: 12px;
+  background-color: #674c74;
+  font-size: 1.3rem;
+  margin: 0 0.25rem;
 }
